Calling getUserMedia in a link that was opened with target="_blank" does not work the second time https://bugs.webkit.org/show_bug.cgi?id=188088 <rdar://problem/42681448>

Reviewed by Eric Carlson.

On closing a page, we need to make sure to consider that the capture is ended,
as otherwise WebPageProxy will not get noticed from WebPage, since WebPageProxy is no longer an IPC receiver.

* UIProcess/UserMediaProcessManager.cpp:
(WebKit::UserMediaProcessManager::endedCaptureSession):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):


Canonical link: https://commits.webkit.org/207009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238873 268f45cc-cd09-0410-ab3c-d52691b4dbfc